--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -33,3 +33,10 @@ jobs:
 
     - name: Test
       run: go test -v ./...
+    - name: Codecov
+      # You may pin to the exact commit or the version.
+      # uses: codecov/codecov-action@6004246f47ab62d32be025ce173b241cd84ac58e
+      uses: codecov/codecov-action@v1.0.13
+      with:
+        token: ${{secrets.CODECOV_TOKEN}}
+        file: ./coverage.txt
