--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -33,6 +33,8 @@ jobs:
 
     - name: Test
       run: go test -v ./...
+    - name: TestCoverage
+      run: go test -v ./... -short -coverprofile coverage.txt -covermode=atomic
     - name: Codecov
       # You may pin to the exact commit or the version.
       # uses: codecov/codecov-action@6004246f47ab62d32be025ce173b241cd84ac58e
