--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -34,11 +34,11 @@ jobs:
     - name: Test
       run: go test -v ./...
     - name: TestCoverage
-      run: go test -v ./... -short -coverprofile coverage.txt -covermode=atomic
-#    - name: Codecov
-#      # You may pin to the exact commit or the version.
-#      # uses: codecov/codecov-action@6004246f47ab62d32be025ce173b241cd84ac58e
-#      uses: codecov/codecov-action@v1.5.0
-#      with:
-#        token: ${{secrets.CODECOV_TOKEN}}
-#        file: ./coverage.txt
+      run: go test -v ./... -coverprofile=coverage.txt -covermode=atomic
+    - name: Codecov
+      #      # You may pin to the exact commit or the version.
+      #      # uses: codecov/codecov-action@6004246f47ab62d32be025ce173b241cd84ac58e
+      uses: codecov/codecov-action@v1.5.0
+      with:
+        token: ${{secrets.CODECOV_TOKEN}}
+        file: ./coverage.txt
